linter fixing / added auto-fixing css

--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,6 +1,11 @@
 linters:
   csslint: {  }
+  stylelint:
+        config: 'stylelintrc.json'
+        fixer: true
 files:
   ignore:
     - 'bower_components/*'
     - 'node_modules/*'
+fixers:
+    enable: true
